# memcached_lite

./: .gitignore  README.md  memcached_lite.py  pyproject.toml  run_daemon.py
compatibility-test/: test-pymemcahed.py  test-python-memcached.py  test-redis.py
example/: redis_lite_main.py  redis_notification_main.py  start.py  status.py  stop.py
memcached_lite/: __init__.py  __main__.py  redis_lite.py  redis_lite_main.py  redis_notification.py  run_daemon.py  status.py
