[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memcached_lite"
version = "0.1.0"
description = "A lightweight Memcached-compatible server implemented in Python using asyncio with detailed logging and noreply handling."
readme = "README.md"
authors = [
    { name = "Takashi Sasaki", email = "takashi316@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "python-memcached>=1.59",
    "pymemcache>=3.5.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools.packages.find]
where = ["."]
